# sfa-relational2rdf

python/: README.md  pyproject.toml
python/relational2rdf/: cli.py  models.py
python/relational2rdf/converter/: manager.py  settings.py
python/relational2rdf/converter/ai/: converter.py  inference.py  magic.py
python/relational2rdf/converter/ontology/: converter.py
python/relational2rdf/rdf/: writer.py
python/relational2rdf/siard/: __init__.py  data_source.py  reader.py  sql_types.py  table_reader.py  v1.py  v2.py
